--- a/src/lib/container/Image/ImageList.astro
+++ b/src/lib/container/Image/ImageList.astro
@@ -1,12 +1,23 @@
 ---
 import {ImageBlurhash} from '../../components/ImageBlurhash'
-import { getImage } from '@astrojs/image';
+// import {  Image } from '@astrojs/image/components';
+// import { getImage } from '@astrojs/image';
 
-const { src } = await getImage({
-  src: 'https://firebasestorage.googleapis.com/v0/b/photo-log-94d7a.appspot.com/o/beer%2F462f9f0c-b635-4606-bdcc-9e4d14f1bbbb.jpeg?alt=media&token=ee8103e0-4ba6-47c8-8992-e2cb43ab2c76',
-  alt: 'My hero image',
-});
+// const { src } = await getImage({
+//   src: 'https://firebasestorage.googleapis.com/v0/b/photo-log-94d7a.appspot.com/o/beer%2F462f9f0c-b635-4606-bdcc-9e4d14f1bbbb.jpeg?alt=media&token=ee8103e0-4ba6-47c8-8992-e2cb43ab2c76',
+//   alt: 'My hero image',
+// width:400,
+// height:400
+// });
+// console.log(src);
+
 ---
 
+<!-- <Image 
+src={src}	
+width={400}
+height={400}
+alt='My hero image'
 
+/> -->
 <ImageBlurhash client:load />
